# curpage

./: README.md  pyproject.toml  render.yaml
comments/: admin.py  models.py  serializers.py  urls.py  views.py
comments/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py  0004_initial.py  0005_alter_comment_photo_alter_comment_text_and_more.py  0006_remove_like_photo_remove_like_text_remove_like_video_and_more.py  0007_like_text.py  0008_like_photo.py  0009_bookmark.py  0010_rename_like_bookmark_bookmark.py
config/: settings.py  urls.py
dms/: admin.py  models.py  serializers.py  urls.py  views.py
dms/migrations/: 0001_initial.py  0002_initial.py  0003_dmroom_title.py  0004_rename_user_dm_member_remove_dmroom_users_and_more.py  0005_alter_dmroom_host_alter_dmroom_members.py  0006_alter_dm_options_alter_dmroom_options.py
homepage/: serializers.py  views.py
photos/: admin.py  models.py  serializers.py  urls.py  views.py
photos/migrations/: 0001_initial.py  0002_initial.py  0003_alter_photo_photo.py  0004_alter_photo_tags.py  0005_alter_photo_options.py  0006_alter_photo_photo.py  0007_alter_photo_photo.py  0008_alter_photo_photo.py  0009_alter_photo_photo.py  0010_alter_photo_title.py  0011_alter_photo_photo.py  0012_photo_image_url_alter_photo_photo.py  0013_remove_photo_image_url.py  (+1 more)
tags/: admin.py  models.py  serializers.py  urls.py  views.py
texts/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
videos/: admin.py  models.py  serializers.py  urls.py  views.py
(+19 files in other folders)
