[tool.poetry]
name = "curpage"
version = "0.1.0"
description = ""
authors = ["hanihoneykim <107341819+hanihoneykim@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.6"
django = "~4.0"
django-admin-rangefilter = "^0.9.0"
djangorestframework = "3.14.0"
django-cors-headers = "^4.0.0"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
django-environ = "^0.10.0"
dj-database-url = "^2.1.0"
psycopg2-binary = "^2.9.7"
whitenoise = {extras = ["brotli"], version = "^6.5.0"}
gunicorn = "^21.2.0"
sentry-sdk = "^1.31.0"
boto3 = "^1.28.69"
django-storages = "^1.14.2"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
